[gd_scene load_steps=13 format=3 uid="uid://bgr8srslqxxam"]

[ext_resource type="Script" path="res://scripts/trex.gd" id="1_5tfk7"]
[ext_resource type="Texture2D" uid="uid://gkirjxockryy" path="res://assets/Sprite Pack 8/4 - Percy/Running (32 x 32).png" id="1_p1re2"]
[ext_resource type="Texture2D" uid="uid://bky4xjtil205r" path="res://assets/Sprite Pack 8/4 - Percy/Shooting_Fireball (32 x 32).png" id="2_yrmgo"]
[ext_resource type="Texture2D" uid="uid://bcwyinpt7rcnd" path="res://assets/Sprite Pack 8/4 - Percy/Hurt (32 x 32).png" id="4_4jj2h"]
[ext_resource type="PackedScene" uid="uid://dbjedcag4ngfj" path="res://prefabs/hitbox.tscn" id="5_48k1m"]

[sub_resource type="Animation" id="Animation_r1hgk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_p1re2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_f8nkb"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_4jj2h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8slde"]
resource_name = "running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_p1re2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_igjhm"]
resource_name = "shooting"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_yrmgo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_fireball"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o802r"]
_data = {
"RESET": SubResource("Animation_r1hgk"),
"hurt": SubResource("Animation_f8nkb"),
"running": SubResource("Animation_8slde"),
"shooting": SubResource("Animation_igjhm")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5gofs"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcibx"]
size = Vector2(20, 4)

[node name="trex" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_5tfk7")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_p1re2")
hframes = 6

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../sprite")
autoplay = "running"
libraries = {
"": SubResource("AnimationLibrary_o802r")
}

[node name="fireball_spawn" type="Marker2D" parent="."]
position = Vector2(5, -12)

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(2, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5gofs")

[node name="ground_detector" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(0, 9)
collision_mask = 2

[node name="player_detector" type="RayCast2D" parent="."]
position = Vector2(0, -9)
target_position = Vector2(50, 0)

[node name="hitbox" parent="." instance=ExtResource("5_48k1m")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(3, -20)
shape = SubResource("RectangleShape2D_jcibx")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
